# easy_config

./: .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.rst  mypy.ini  setup.cfg  setup.py  tox.ini  vulture_whitelist.py
docs/source/: changelog.rst  conf.py  index.rst  license.rst  reference.rst
docs/source/contrib/: click.rst
src/easy_config/: __init__.py
src/easy_config/contrib/: __init__.py  click.py
tests/: __init__.py  conftest.py  test_config.ini  test_contrib_click.py  test_easy_config.py
