##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = easy_config
version = 0.1.0
url = https://github.com/scolby33/easy_config
download_url = https://github.com/scolby33/easy_config/releases
project_urls =
    Bug Tracker = https://github.com/scolby33/easy_config/issues
    Source Code = https://github.com/scolby33/easy_config
author = Scott Colby
author_email = scolby33@gmail.com
maintainer = scolby33@gmail.com
maintainer_email = scolby33@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Utilities
license = MIT
# for wheels https://wheel.readthedocs.io/en/stable/index.html#including-the-license-in-the-generated-wheel-file
license_file = LICENSE.rst
description = Parse configuration values from files, the environment, and elsewhere all in one place.
long_description = file: README.rst
keywords =
    configuration
    config
    configuration management

[options]
python_requires = >=3.6
install_requires =
    dataclasses; python_version<"3.7"
tests_require =
    tox
packages = find:
package_dir =
    = src
zip_safe = true

[options.packages.find]
where = src

# configuring bdist_wheel
[bdist_wheel]
python-tag = py37
